--- a/TruthTableSolverBlazorWasm/Pages/Index.razor
+++ b/TruthTableSolverBlazorWasm/Pages/Index.razor
@@ -29,7 +29,7 @@
             <div class="legand">
                 <ul>
                     <li>
-                        Conjunction: . • ^ &(Broken right now due to HTML sharing amp for things, i'm not a frontend guy lol)
+                        Conjunction: . • ^ &
                     </li>
                     <li>
                         Disjunction: v |
